# ocf-engine-next

./: CMakeLists.txt  LICENSE  README.md
engine/: CMakeLists.txt
engine/include/ocf/: Component.h  Engine.h
engine/include/ocf/2d/: Sprite.h
engine/include/ocf/core/: Allocator.h  Logger.h  Object.h  Reference.h
engine/include/ocf/math/: MaxRectsBinPack.h  Rect.h  RectBinPack.h  constants.h  constants.inl  geometric.h  geometric.inl  mat2.h  mat2.inl  mat3.h  mat3.inl  mat4.h  mat4.inl  matrix_transform.h  matrix_transform.inl  qualifie.h  quat.h  quat.inl  vec2.h  vec2.inl  vec3.h  vec3.inl  vec4.h  vec4.inl
engine/include/ocf/platform/: Application.h  Window.h  platform.h
engine/include/ocf/renderer/: IndexBuffer.h  Material.h  MaterialEnums.h  Program.h  Renderer.h  Texture.h  TextureSampler.h  VertexBuffer.h
engine/include/ocf/renderer/backend/: BufferDescriptor.h  Driver.h  DriverEnums.h  Handle.h  PipelineState.h  PixelBufferDescriptor.h
engine/include/ocf/scene/: Component.h  Engine.h  Node.h  Scene.h
engine/src/: Component.cpp  Engine.cpp  Node.cpp  Scene.cpp
engine/src/2d/: Sprite.cpp
engine/src/core/: Allocator.cpp  Logger.cpp  Object.cpp  Reference.cpp
engine/src/math/: MaxRectsBinPack.cpp  Rect.cpp
engine/src/platform/: Application.cpp  GLFWWindow.cpp  GLFWWindow.h  Window.cpp
engine/src/renderer/: IndexBuffer.cpp  Material.cpp  Program.cpp  Renderer.cpp  Texture.cpp  VertexBuffer.cpp
engine/src/renderer/backend/: CMakeLists.txt  Driver.cpp  DriverBase.cpp  DriverBase.h  HandleAllocator.cpp  HandleAllocator.h
engine/src/renderer/backend/opengl/: OpenGLContext.cpp  OpenGLContext.h  OpenGLDriver.cpp  OpenGLDriver.h  OpenGLUtility.cpp  OpenGLUtility.h
engine/src/scene/: Component.cpp  Engine.cpp  Node.cpp  Scene.cpp
engine/test/: CMakeLists.txt
tests/: CMakeLists.txt  main.cpp
